Hot-fix z-index of user popup-menu
(cherry picked from commit f34dbe5123a970d56e57437168b020e6eec41439)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -85,6 +85,10 @@
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.2s, visibility 0s linear 0.2s;
+    position: absolute;
+    top: 55px;
+    right: -9px;
+    z-index: 1;
 }
 
 .popup__closing-overlay {
@@ -93,12 +97,10 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: -1;
 }
 
 .popup__menu {
-    position: absolute;
-    top: 55px;
-    right: -9px;
     background: #FCFCFC;
     box-shadow: 0 8px 16px rgba(17, 17, 17, 0.04);
     width: 164px;
